...
    watch,
    setValue,
    defaultValues,
  });
  const descPlaceholder = isSaveDrop
    ? "What is this drop about?"
    : "Why should people collect this drop?";
  const descHelperText = isSaveDrop
    ? "You can edit this 30 minutes after the drop is created."
    : "Promote a collectible, raffle or allow-list to attract more collectors. You can edit this 30 minutes after the drop is created.";

  useEffect(() => {
    resetDropState();
...
                                }
                                width={40}
                                height={40}
                              />
                              <View tw="mt-2">
                                <Text tw="font-bold text-gray-600 dark:text-gray-200">
                                  Upload
                                </Text>
                              </View>
                              {errors.file?.message ? (
                                <View tw="mt-2">
                                  <Text tw="text-center text-sm text-red-500">
                                    {errors?.file?.message as string}
...
                  name="title"
                  render={({ field: { onChange, onBlur, value, ref } }) => {
                    return (
                      <Fieldset
                        ref={ref}
                        label="Title"
                        placeholder="Sweet"
                        onBlur={onBlur}
                        errorText={errors.title?.message}
                        value={value}
                        onChangeText={onChange}
                        numberOfLines={2}
                        multiline
...
                      name="description"
                      render={({ field: { onChange, onBlur, value, ref } }) => {
                        return (
                          <Fieldset
                            ref={ref}
                            tw="flex-1"
                            label="Description"
                            multiline
                            textAlignVertical="top"
                            placeholder={descPlaceholder}
                            onBlur={onBlur}
                            helperText={descHelperText}
                            errorText={errors.description?.message}
...
              <View tw="items-center justify-center">
                <Spinner size="small" />
              </View>
            ) : state.status === "error" ? (
              "Failed. Please retry!"
            ) : showPreview ? (
              "Drop now"
            ) : (
              "Continue"
            )}
          </Button>

          {state.transactionHash && !showPreview ? (
            <View tw="mt-4">
              <PolygonScanButton transactionHash={state.transactionHash} />
...
