...
            />
          ) : null}
        </View>
        {Platform.OS !== "web" && !user.user?.data.profile.verified ? null : (
          <View tw="mt-2.5 w-full px-4">
            <CreateCard
              title="Drops: Free digital collectibles"
              description="Share a link to instantly create a collector list and connect with your fans."
              icon={<FreeDropType color={iconColor} height={24} width={24} />}
              onPress={() => {
                if (Platform.OS !== "web") {
                  modalScreenContext?.pop?.({
                    callback: () => {
...
