...
        ]}
      >
        <LoginInputField
          key="login-email-field"
          validationSchema={emailValidationSchema}
          label="Email address"
          placeholder="Enter your email address"
          inputMode="email"
          textContentType="emailAddress"
          signInButtonLabel="Send Email"
          onSubmit={handleSubmitEmail}
          textInputRef={textInputRef}
        />
        <LoginButton onPress={() => setShowEmailLogin(false)} type="social" />
      </View>
      <View style={{ display: showEmailLogin ? "none" : "flex" }}>
...
