...
            }) => (
              <Fieldset
                ref={(innerRef: TextInput) => {
                  usernameRef.current = innerRef;
                  ref(innerRef);
                }}
                placeholder="your_username"
                value={value}
                textContentType="username"
                errorText={
                  !isValidUsername && !error
                    ? "Username taken. Please choose another."
                    : error?.message
...
          size="regular"
          disabled={
            !isFormValid || !isValidUsername || isLoading || isSubmitting
          }
          onPress={handleSubmit(handleSubmitForm)}
        >
          Next
          {isLoading || isSubmitting ? (
            <View tw="absolute right-4 scale-75 justify-center">
              <Spinner size="small" color="darkgrey" />
            </View>
          ) : (
            <></>
...
