...
    }
  };

  return (
    <>
      <Button size="regular" variant="text" onPress={showCaptcha}>
        Skip
      </Button>
      <ConfirmHcaptcha
        ref={captchaRef}
        siteKey={siteKey}
        languageCode="en"
        onMessage={onMessage}
...
