appId: io.showtime.development
---
- tapOn:
    point: "51%,92%"
- tapOn: "Drops: Free digital collectibles"
- tapOn: "Upload"
- tapOn:
    text: "Select Photos…"
    optional: true
- tapOn:
    # Selects photo from picker
    point: "16%,22%"
- tapOn:
    text: "Choose"
    optional: true
- tapOn:
    text: "Keep current Selection"
    optional: true
- tapOn: "Sweet"
- inputText: "This is a test drop"
- tapOn: "Why should people collect this drop?"
- inputText: "This is a test drop description. Keeping it longer to test some features. Hoping this long works or if I should add a few more words!"
- tapOn: "Description"
- swipe:
    start: 50%, 40% # From (90% of width, 50% of height)
    end: 50%, 10% # To (10% of width, 50% of height)
- tapOn:
    id: "i-agree-checkbox"
- tapOn: "Continue"
- tapOn: "Drop now"
- assertVisible: "Congrats! Now share it."
