appId: io.showtime.development
---
- launchApp
# - tapOn: "Showtime on Nishans-MacBook-Pro.local"
- assertVisible: "Sign In"
- tapOn: "Sign In"
- tapOn: "Connect"
- assertNotVisible: "Sign In"
- tapOn:
    point: "50%,94%"
- tapOn: "your_username"
- "inputRandomText"
- tapOn: "Next"
- tapOn: "Skip"
- tapOn: "Skip"
